--- a/PolicyBlindTest/results.html
+++ b/PolicyBlindTest/results.html
@@ -100,7 +100,7 @@
 
                 <!-- Share Results -->
                 <section class="share-results">
-                    <h3>결과 공유하기</h3>
+                    <h3>사이트 공유하기</h3>
                     <div class="share-buttons">
                         <button class="share-btn twitter" onclick="shareToTwitter()">
                             <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
