--- a/PolicyBlindTest/index.html
+++ b/PolicyBlindTest/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>블라인드 정책 선호 확인지 - 정치 성향 진단</title>
     <meta name="description" content="정치 성향은 정책으로 이루어져야 합니다. 블라인드 정책 질문을 통해 당신의 정치적 선호를 확인해보세요.">
-    <meta name="keywords" content="정치성향, 정책선호, 정당진단, 한국정치, 정치테스트">
+    <meta name="keywords" content="정치성향, 정책선호, 정당진단, 한국정치, 정치테스트, 다국어, multilingual">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    
+    <!-- Language alternatives for SEO -->
+    <link rel="alternate" hreflang="ko" href="https://your-domain.github.io/PolicyBlindTest/">
+    <link rel="alternate" hreflang="x-default" href="https://your-domain.github.io/PolicyBlindTest/">
     
     <!-- Google AdSense -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8881525957265363" crossorigin="anonymous"></script>
