--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>종합진단센터 | 성격진단, 정치성향 진단 무료 테스트</title>
     <meta name="description" content="무료 종합진단 테스트 모음. 전지적 독자시점 캐릭터 성격진단, 블라인드 정책 선호 정치성향 진단 등 다양한 진단 테스트를 제공합니다.">
-    <meta name="keywords" content="종합진단, 성격진단, 정치성향진단, 무료테스트, 전지적독자시점, 정책선호도, 캐릭터진단">
+    <meta name="keywords" content="종합진단, 성격진단, 정치성향진단, 무료테스트, 전지적독자시점, 정책선호도, 캐릭터진단, 다국어, 영어, 중국어, 일본어, 러시아어, multilingual">
     <meta name="author" content="종합진단센터">
     <meta name="robots" content="index, follow">
+    
+    <!-- Language alternatives for SEO -->
+    <link rel="alternate" hreflang="ko" href="https://your-domain.github.io/">
+    <link rel="alternate" hreflang="en" href="https://your-domain.github.io/?lang=en">
+    <link rel="alternate" hreflang="ja" href="https://your-domain.github.io/?lang=ja">
+    <link rel="alternate" hreflang="zh" href="https://your-domain.github.io/?lang=zh">
+    <link rel="alternate" hreflang="ru" href="https://your-domain.github.io/?lang=ru">
+    <link rel="alternate" hreflang="x-default" href="https://your-domain.github.io/">
     
     <!-- Open Graph tags for social sharing -->
     <meta property="og:title" content="종합진단센터 - 무료 성격진단 & 정치성향 테스트">
@@ -73,6 +81,15 @@
                     <a href="#tests" class="nav-link">진단테스트</a>
                     <a href="#about" class="nav-link">소개</a>
                     <a href="sitemap.html" class="nav-link">사이트맵</a>
+                    <div class="language-selector-nav">
+                        <select id="languageSelect" onchange="changeLanguage(this.value)">
+                            <option value="ko">한국어</option>
+                            <option value="en">English</option>
+                            <option value="ja">日本語</option>
+                            <option value="zh">中文</option>
+                            <option value="ru">Русский</option>
+                        </select>
+                    </div>
                 </div>
                 <div class="mobile-menu-toggle">
                     <i class="fas fa-bars"></i>
@@ -148,6 +165,13 @@
                     </div>
                     <h3>모바일 최적화</h3>
                     <p>언제 어디서나 편리하게 이용할 수 있는 반응형 웹 디자인</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <i class="fas fa-globe"></i>
+                    </div>
+                    <h3>다국어 지원</h3>
+                    <p>한국어, 영어, 일본어, 중국어, 러시아어 등 5개 언어로 진단 가능</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
@@ -332,6 +356,10 @@
                             <div class="stat-label">현재 테스트</div>
                         </div>
                         <div class="stat-card">
+                            <div class="stat-number">5</div>
+                            <div class="stat-label">지원 언어</div>
+                        </div>
+                        <div class="stat-card">
                             <div class="stat-number">98%</div>
                             <div class="stat-label">만족도</div>
                         </div>
@@ -417,6 +445,7 @@
              data-full-width-responsive="true"></ins>
     </div>
 
+    <script src="script.js"></script>
     <script src="script.js"></script>
     <script>
         // Initialize AdSense ads
