--- a/sitemap.html
+++ b/sitemap.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>사이트맵 | 종합진단센터</title>
-    <meta name="description" content="종합진단센터의 전체 페이지와 진단 테스트를 한눈에 확인하세요.">
+    <title data-translation-key="sitemap_title">사이트맵 | 종합진단센터</title>
+    <meta name="description" data-translation-key="sitemap_meta_description" content="종합진단센터의 전체 페이지와 진단 테스트를 한눈에 확인하세요.">
     <meta name="keywords" content="사이트맵, 종합진단, 성격진단, 정치성향진단, 무료테스트">
     <meta name="robots" content="index, follow">
     
@@ -26,6 +26,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .lang-selector {
+            position: absolute;
+            top: 1.2rem;
+            right: 2rem;
+            z-index: 10;
+            background: #fff;
+            color: #222;
+            border: 1px solid #e0e0e0;
+            border-radius: 8px;
+            padding: 0.3rem 0.8rem;
+            font-size: 1rem;
+            outline: none;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.04);
+        }
+    </style>
     <style>
         .sitemap-container {
             max-width: 800px;
@@ -101,19 +117,26 @@
     <!-- Header -->
     <header class="header">
         <nav class="navbar">
-            <div class="container">
+            <div class="container" style="position:relative;">
                 <div class="nav-brand">
                     <a href="index.html" class="brand-logo">
                         <i class="fas fa-brain"></i>
-                        <span>종합진단센터</span>
+                        <span data-translation-key="brand">종합진단센터</span>
                     </a>
                 </div>
                 <div class="nav-menu">
-                    <a href="index.html" class="nav-link">홈</a>
-                    <a href="index.html#tests" class="nav-link">진단테스트</a>
-                    <a href="index.html#about" class="nav-link">소개</a>
-                    <a href="sitemap.html" class="nav-link active">사이트맵</a>
+                    <a href="index.html" class="nav-link" data-translation-key="nav_home">홈</a>
+                    <a href="index.html#tests" class="nav-link" data-translation-key="nav_tests">진단테스트</a>
+                    <a href="index.html#about" class="nav-link" data-translation-key="nav_about">소개</a>
+                    <a href="sitemap.html" class="nav-link active" data-translation-key="nav_sitemap">사이트맵</a>
                 </div>
+                <select class="lang-selector" id="langSelector">
+                    <option value="ko">한국어</option>
+                    <option value="en">English</option>
+                    <option value="ja">日本語</option>
+                    <option value="zh">中文</option>
+                    <option value="ru">Русский</option>
+                </select>
             </div>
         </nav>
     </header>
@@ -121,11 +144,8 @@
     <main class="sitemap-container">
         <!-- Header Section -->
         <div class="sitemap-header">
-            <h1>
-                <i class="fas fa-sitemap"></i>
-                사이트맵
-            </h1>
-            <p>종합진단센터의 모든 페이지와 테스트를 한눈에 확인하세요</p>
+            <h1><i class="fas fa-sitemap"></i> <span data-translation-key="sitemap">사이트맵</span></h1>
+            <p data-translation-key="sitemap_desc">종합진단센터의 모든 페이지와 테스트를 한눈에 확인하세요</p>
         </div>
 
         <!-- Header Ad -->
@@ -140,138 +160,126 @@
 
         <!-- Main Pages -->
         <div class="sitemap-section">
-            <h2>
-                <i class="fas fa-home"></i>
-                메인 페이지
-            </h2>
+            <h2><i class="fas fa-home"></i> <span data-translation-key="main_page">메인 페이지</span></h2>
             <ul class="sitemap-list">
                 <li>
                     <a href="index.html">
                         <i class="fas fa-home"></i>
-                        홈페이지
+                        <span data-translation-key="home">홈페이지</span>
                     </a>
-                    <div class="page-description">종합진단센터 메인 페이지 - 모든 진단 테스트 소개</div>
+                    <div class="page-description" data-translation-key="home_desc">종합진단센터 메인 페이지 - 모든 진단 테스트 소개</div>
                 </li>
                 <li>
                     <a href="index.html#about">
                         <i class="fas fa-info-circle"></i>
-                        사이트 소개
+                        <span data-translation-key="about">사이트 소개</span>
                     </a>
-                    <div class="page-description">종합진단센터에 대한 상세 정보</div>
+                    <div class="page-description" data-translation-key="about_desc">종합진단센터에 대한 상세 정보</div>
                 </li>
                 <li>
                     <a href="sitemap.html">
                         <i class="fas fa-sitemap"></i>
-                        사이트맵 (현재 페이지)
+                        <span data-translation-key="sitemap_current">사이트맵 (현재 페이지)</span>
                     </a>
-                    <div class="page-description">전체 사이트 구조 안내</div>
+                    <div class="page-description" data-translation-key="sitemap_current_desc">전체 사이트 구조 안내</div>
                 </li>
             </ul>
         </div>
 
         <!-- Tests Section -->
         <div class="sitemap-section">
-            <h2>
-                <i class="fas fa-clipboard-check"></i>
-                진단 테스트
-            </h2>
+            <h2><i class="fas fa-clipboard-check"></i> <span data-translation-key="tests">진단 테스트</span></h2>
             <ul class="sitemap-list">
                 <li>
                     <a href="NovelCharacterTest/">
                         <i class="fas fa-book"></i>
-                        전지적 독자시점 성격진단
+                        <span data-translation-key="novel_test">전지적 독자시점 성격진단</span>
                     </a>
-                    <div class="page-description">웹툰 캐릭터와 나의 성격 유형 비교 테스트 (20문항, 약 5분)</div>
+                    <div class="page-description" data-translation-key="novel_test_desc">웹툰 캐릭터와 나의 성격 유형 비교 테스트 (20문항, 약 5분)</div>
                 </li>
                 <li>
                     <a href="PolicyBlindTest/">
                         <i class="fas fa-balance-scale"></i>
-                        블라인드 정책 선호도 진단
+                        <span data-translation-key="policy_test">블라인드 정책 선호도 진단</span>
                     </a>
-                    <div class="page-description">정당명 없이 순수 정책으로 정치성향 분석 (30문항, 약 8분)</div>
+                    <div class="page-description" data-translation-key="policy_test_desc">정당명 없이 순수 정책으로 정치성향 분석 (30문항, 약 8분)</div>
                 </li>
                 <li>
                     <a href="#" style="opacity: 0.6; cursor: not-allowed;">
                         <i class="fas fa-hourglass-half"></i>
-                        MBTI 세부 진단 (출시예정)
+                        <span data-translation-key="mbti_coming">MBTI 세부 진단 (출시예정)</span>
                     </a>
-                    <div class="page-description">2025년 하반기 출시 예정</div>
+                    <div class="page-description" data-translation-key="mbti_coming_desc">2025년 하반기 출시 예정</div>
                 </li>
                 <li>
                     <a href="#" style="opacity: 0.6; cursor: not-allowed;">
                         <i class="fas fa-heart"></i>
-                        연애 스타일 분석 (출시예정)
+                        <span data-translation-key="love_coming">연애 스타일 분석 (출시예정)</span>
                     </a>
-                    <div class="page-description">2025년 하반기 출시 예정</div>
+                    <div class="page-description" data-translation-key="love_coming_desc">2025년 하반기 출시 예정</div>
                 </li>
             </ul>
         </div>
 
         <!-- Test Sub-pages -->
         <div class="sitemap-section">
-            <h2>
-                <i class="fas fa-file-alt"></i>
-                테스트 상세 페이지
-            </h2>
+            <h2><i class="fas fa-file-alt"></i> <span data-translation-key="test_detail">테스트 상세 페이지</span></h2>
             <ul class="sitemap-list">
                 <li>
                     <a href="NovelCharacterTest/index.html">
                         <i class="fas fa-play"></i>
-                        전지적 독자시점 - 테스트 시작
+                        <span data-translation-key="novel_start">전지적 독자시점 - 테스트 시작</span>
                     </a>
-                    <div class="page-description">성격진단 질문지 및 결과 페이지</div>
+                    <div class="page-description" data-translation-key="novel_start_desc">성격진단 질문지 및 결과 페이지</div>
                 </li>
                 <li>
                     <a href="PolicyBlindTest/index.html">
                         <i class="fas fa-poll"></i>
-                        정책 선호도 - 설문 시작
+                        <span data-translation-key="policy_start">정책 선호도 - 설문 시작</span>
                     </a>
-                    <div class="page-description">정책 질문지 페이지</div>
+                    <div class="page-description" data-translation-key="policy_start_desc">정책 질문지 페이지</div>
                 </li>
                 <li>
                     <a href="PolicyBlindTest/survey.html">
                         <i class="fas fa-vote-yea"></i>
-                        정책 선호도 - 설문 진행
+                        <span data-translation-key="policy_survey">정책 선호도 - 설문 진행</span>
                     </a>
-                    <div class="page-description">30개 정책 질문 답변 페이지</div>
+                    <div class="page-description" data-translation-key="policy_survey_desc">30개 정책 질문 답변 페이지</div>
                 </li>
                 <li>
                     <a href="PolicyBlindTest/results.html">
                         <i class="fas fa-chart-pie"></i>
-                        정책 선호도 - 결과 분석
+                        <span data-translation-key="policy_result">정책 선호도 - 결과 분석</span>
                     </a>
-                    <div class="page-description">정치성향 분석 결과 및 정당 매칭</div>
+                    <div class="page-description" data-translation-key="policy_result_desc">정치성향 분석 결과 및 정당 매칭</div>
                 </li>
             </ul>
         </div>
 
         <!-- Information Pages -->
         <div class="sitemap-section">
-            <h2>
-                <i class="fas fa-shield-alt"></i>
-                정보 페이지
-            </h2>
+            <h2><i class="fas fa-shield-alt"></i> <span data-translation-key="info_page">정보 페이지</span></h2>
             <ul class="sitemap-list">
                 <li>
                     <a href="#privacy" onclick="alert('개인정보처리방침 페이지는 준비 중입니다.')">
                         <i class="fas fa-user-shield"></i>
-                        개인정보처리방침
+                        <span data-translation-key="privacy">개인정보처리방침</span>
                     </a>
-                    <div class="page-description">개인정보 수집 및 처리에 관한 정책</div>
+                    <div class="page-description" data-translation-key="privacy_desc">개인정보 수집 및 처리에 관한 정책</div>
                 </li>
                 <li>
                     <a href="#terms" onclick="alert('이용약관 페이지는 준비 중입니다.')">
                         <i class="fas fa-file-contract"></i>
-                        이용약관
+                        <span data-translation-key="terms">이용약관</span>
                     </a>
-                    <div class="page-description">사이트 이용에 관한 약관</div>
+                    <div class="page-description" data-translation-key="terms_desc">사이트 이용에 관한 약관</div>
                 </li>
                 <li>
                     <a href="#contact" onclick="alert('문의 페이지는 준비 중입니다.')">
                         <i class="fas fa-envelope"></i>
-                        문의하기
+                        <span data-translation-key="contact">문의하기</span>
                     </a>
-                    <div class="page-description">사이트 관련 문의 및 제안</div>
+                    <div class="page-description" data-translation-key="contact_desc">사이트 관련 문의 및 제안</div>
                 </li>
             </ul>
         </div>
@@ -288,26 +296,23 @@
 
         <!-- Statistics -->
         <div class="sitemap-section">
-            <h2>
-                <i class="fas fa-chart-bar"></i>
-                사이트 통계
-            </h2>
+            <h2><i class="fas fa-chart-bar"></i> <span data-translation-key="site_stats">사이트 통계</span></h2>
             <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1rem; margin-top: 1rem;">
                 <div style="text-align: center; padding: 1rem; background: var(--bg); border-radius: 8px;">
                     <div style="font-size: 1.5rem; font-weight: bold; color: var(--primary);">2</div>
-                    <div style="font-size: 0.9rem; color: #666;">현재 서비스 중인 테스트</div>
+                    <div style="font-size: 0.9rem; color: #666;" data-translation-key="stat_tests">현재 서비스 중인 테스트</div>
                 </div>
                 <div style="text-align: center; padding: 1rem; background: var(--bg); border-radius: 8px;">
                     <div style="font-size: 1.5rem; font-weight: bold; color: var(--primary);">16,081+</div>
-                    <div style="font-size: 0.9rem; color: #666;">누적 테스트 참여자</div>
+                    <div style="font-size: 0.9rem; color: #666;" data-translation-key="stat_participants">누적 테스트 참여자</div>
                 </div>
                 <div style="text-align: center; padding: 1rem; background: var(--bg); border-radius: 8px;">
-                    <div style="font-size: 1.5rem; font-weight: bold; color: var(--primary);">4</div>
-                    <div style="font-size: 0.9rem; color: #666;">지원 언어</div>
+                    <div style="font-size: 1.5rem; font-weight: bold; color: var(--primary);">5</div>
+                    <div style="font-size: 0.9rem; color: #666;" data-translation-key="stat_languages">지원 언어</div>
                 </div>
                 <div style="text-align: center; padding: 1rem; background: var(--bg); border-radius: 8px;">
                     <div style="font-size: 1.5rem; font-weight: bold; color: var(--primary);">24/7</div>
-                    <div style="font-size: 0.9rem; color: #666;">언제든지 이용 가능</div>
+                    <div style="font-size: 0.9rem; color: #666;" data-translation-key="stat_anytime">언제든지 이용 가능</div>
                 </div>
             </div>
         </div>
@@ -320,23 +325,23 @@
                 <div class="footer-section">
                     <div class="footer-brand">
                         <i class="fas fa-brain"></i>
-                        <span>종합진단센터</span>
+                        <span data-translation-key="brand">종합진단센터</span>
                     </div>
-                    <p>나를 더 잘 알아가는 종합진단 플랫폼</p>
+                    <p data-translation-key="footer_desc">나를 더 잘 알아가는 종합진단 플랫폼</p>
                 </div>
                 <div class="footer-section">
-                    <h4>빠른 링크</h4>
+                    <h4 data-translation-key="quick_links">빠른 링크</h4>
                     <ul>
-                        <li><a href="index.html">홈</a></li>
-                        <li><a href="index.html#tests">진단테스트</a></li>
-                        <li><a href="index.html#about">소개</a></li>
-                        <li><a href="sitemap.html">사이트맵</a></li>
+                        <li><a href="index.html" data-translation-key="nav_home">홈</a></li>
+                        <li><a href="index.html#tests" data-translation-key="nav_tests">진단테스트</a></li>
+                        <li><a href="index.html#about" data-translation-key="nav_about">소개</a></li>
+                        <li><a href="sitemap.html" data-translation-key="nav_sitemap">사이트맵</a></li>
                     </ul>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 종합진단센터. All rights reserved.</p>
-                <p>이 사이트는 교육 및 재미를 목적으로 제작되었습니다.</p>
+                <p>&copy; 2025 <span data-translation-key="brand">종합진단센터</span>. <span data-translation-key="all_rights">All rights reserved.</span></p>
+                <p data-translation-key="footer_notice">이 사이트는 교육 및 재미를 목적으로 제작되었습니다.</p>
             </div>
         </div>
     </footer>
@@ -356,6 +361,44 @@
         (adsbygoogle = window.adsbygoogle || []).push({});
         (adsbygoogle = window.adsbygoogle || []).push({});
         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    <script src="translations.js"></script>
+    <script src="script.js"></script>
+    <script>
+        // 언어 선택 및 동적 텍스트 변경
+        document.addEventListener('DOMContentLoaded', function() {
+            // 언어 선택 드롭다운
+            const langSelector = document.getElementById('langSelector');
+            // 현재 언어 설정 (로컬스토리지 우선)
+            let lang = localStorage.getItem('lang') || 'ko';
+            langSelector.value = lang;
+            // 페이지 텍스트 업데이트 함수
+            function updateSitemapLanguage() {
+                if (!window.translations) return;
+                const t = window.translations[lang] || window.translations['ko'];
+                document.querySelectorAll('[data-translation-key]').forEach(el => {
+                    const key = el.getAttribute('data-translation-key');
+                    if (t[key]) {
+                        // 메뉴/리스트 등에서 <span data-translation-key>는 textContent로만 갱신 (아이콘 보존)
+                        if (el.tagName === 'SPAN') {
+                            el.textContent = t[key];
+                        } else {
+                            el.innerHTML = t[key];
+                        }
+                    }
+                });
+                // meta 태그도 변경
+                const metaDesc = document.querySelector('meta[data-translation-key="sitemap_meta_description"]');
+                if (metaDesc && t['sitemap_meta_description']) metaDesc.setAttribute('content', t['sitemap_meta_description']);
+                document.title = t['sitemap_title'] || '사이트맵 | 종합진단센터';
+            }
+            langSelector.addEventListener('change', function() {
+                lang = langSelector.value;
+                localStorage.setItem('lang', lang);
+                updateSitemapLanguage();
+            });
+            updateSitemapLanguage();
+        });
     </script>
 </body>
 </html>
