--- a/PolicyBlindTest/index.html
+++ b/PolicyBlindTest/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="css/style.css">
     
     <!-- Language alternatives for SEO -->
-    <link rel="alternate" hreflang="ko" href="https://your-domain.github.io/PolicyBlindTest/">
-    <link rel="alternate" hreflang="x-default" href="https://your-domain.github.io/PolicyBlindTest/">
+    <link rel="alternate" hreflang="ko" href="https://assessment.qhop.org/PolicyBlindTest/">
+    <link rel="alternate" hreflang="x-default" href="https://assessment.qhop.org/PolicyBlindTest/">
     
     <!-- Google AdSense -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8881525957265363" crossorigin="anonymous"></script>
