--- a/index.html
+++ b/index.html
@@ -276,6 +276,44 @@
                     </div>
                 </article>
 
+                <!-- Premier League Test -->
+                <article class="test-card">
+                    <div class="test-image">
+                        <div class="test-badge" style="background:#1e90ff;color:#fff;">축구</div>
+                        <div class="test-icon">⚽</div>
+                    </div>
+                    <div class="test-content">
+                        <h3 class="test-title">프리미어리그 축구팀 진단</h3>
+                        <p class="test-description">
+                            20개 프리미어리그 팀 중, 나와 가장 잘 맞는 축구팀을 성향 분석으로 찾아보세요.<br>
+                            맨시티, 리버풀, 첼시, 아스날 등 다양한 팀과의 매칭 결과를 확인할 수 있습니다.
+                        </p>
+                        <div class="test-stats">
+                            <span class="stat-item">
+                                <i class="fas fa-clock"></i>
+                                약 6분
+                            </span>
+                            <span class="stat-item">
+                                <i class="fas fa-question-circle"></i>
+                                20문항
+                            </span>
+                            <span class="stat-item">
+                                <i class="fas fa-users"></i>
+                                7,500명 참여
+                            </span>
+                        </div>
+                        <div class="test-tags">
+                            <span class="tag">축구</span>
+                            <span class="tag">성향진단</span>
+                            <span class="tag">프리미어리그</span>
+                        </div>
+                        <a href="PremierLeague/" class="btn btn-test">
+                            <i class="fas fa-play"></i>
+                            테스트 시작
+                        </a>
+                    </div>
+                </article>
+
                 <!-- Coming Soon Card -->
                 <article class="test-card coming-soon">
                     <div class="test-image">
