--- a/sitemap.html
+++ b/sitemap.html
@@ -205,6 +205,13 @@
                     <div class="page-description" data-translation-key="policy_test_desc">정당명 없이 순수 정책으로 정치성향 분석 (30문항, 약 8분)</div>
                 </li>
                 <li>
+                    <a href="PremierLeague/">
+                        <i class="fas fa-futbol"></i>
+                        <span>프리미어리그 축구팀 진단</span>
+                    </a>
+                    <div class="page-description">20개 프리미어리그 팀 중, 나와 가장 잘 맞는 축구팀을 성향 분석으로 찾아보는 테스트 (20문항, 약 6분)</div>
+                </li>
+                <li>
                     <a href="#" style="opacity: 0.6; cursor: not-allowed;">
                         <i class="fas fa-hourglass-half"></i>
                         <span data-translation-key="mbti_coming">MBTI 세부 진단 (출시예정)</span>
@@ -238,6 +245,13 @@
                         <span data-translation-key="policy_start">정책 선호도 - 설문 시작</span>
                     </a>
                     <div class="page-description" data-translation-key="policy_start_desc">정책 질문지 페이지</div>
+                </li>
+                <li>
+                    <a href="PremierLeague/index.html">
+                        <i class="fas fa-futbol"></i>
+                        <span>프리미어리그 축구팀 진단 - 테스트 시작</span>
+                    </a>
+                    <div class="page-description">프리미어리그 축구팀 성향 분석 질문지 및 결과 페이지</div>
                 </li>
                 <li>
                     <a href="PolicyBlindTest/survey.html">
